# nut

./: .gitignore  CMakeLists.txt
docs/: nut.txt  nut4cc.txt
media/: life-5f.nut
src/: Makefile
src/libnut/: demuxer.c  framecode.c  libnut.h  muxer.c
src/nututils/: framer_vorbis.c  getopt_win.h  nutmerge.c  nutparse.c  remux_avc.c
